--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio | Computer Science Engineer</title>
-    <meta name="description" content="B.Tech Computer Science Engineering student portfolio. Building systems, code, and ideas. Explore my projects, skills, and experience." />
-    <meta name="keywords" content="computer science, software engineer, developer, portfolio, B.Tech, CSE, web development" />
-    <meta name="author" content="Portfolio" />
 
-    <meta property="og:title" content="Portfolio | Computer Science Engineer" />
-    <meta property="og:description" content="B.Tech Computer Science Engineering student portfolio. Building systems, code, and ideas." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio Abhin M Raj</title>
+  <meta name="description" content="Portfolio of Abhin M Raj - Automation Architect & Full-Stack Developer." />
+  <meta name="keywords"
+    content="Abhin M Raj, Portfolio, Automation Architect, Full-Stack Developer, AI Prompt Engineer" />
+  <meta name="author" content="Abhin M Raj" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Portfolio" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <!-- Preconnect for fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  </head>
+  <meta property="og:title" content="Portfolio Abhin M Raj" />
+  <meta property="og:description" content="Portfolio of Abhin M Raj - Automation Architect & Full-Stack Developer." />
+  <meta property="og:type" content="website" />
+  <!-- Removed Lovable Image Links -->
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@code_mayy" />
+  <!-- Removed Lovable Image Links -->
+
+  <!-- Preconnect for fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
